src/main/java/application/dataset/test/invalidRandomAddresses/todo/easy/RandomAddressesWithoutAField.java
package application.dataset.test.invalidRandomAddresses.todo.easy;

public class RandomAddressesWithoutAField {
}
